// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main app bar component app bar indented when drawer is open 1`] = `
Object {
  "adminPageDefaultTab": undefined,
  "classes": Object {
    "appBar": "MainAppBar-appBar-50",
    "button": "MainAppBar-button-53",
    "grow": "MainAppBar-grow-51",
    "menuButton": "MainAppBar-menuButton-54",
    "menuButtonOpen": "MainAppBar-menuButtonOpen-56",
    "menuButtonPlaceholder": "MainAppBar-menuButtonPlaceholder-55",
    "root": "MainAppBar-root-49",
    "titleButton": "MainAppBar-titleButton-52",
  },
  "darkMode": false,
  "drawerOpen": true,
  "highContrastMode": false,
  "homepageUrl": undefined,
  "loading": true,
  "loggedIn": true,
  "logo": undefined,
  "manageCookies": [Function],
  "navigateToAdminPage": [Function],
  "navigateToHelpPage": [Function],
  "navigateToHome": [Function],
  "pathname": "/",
  "plugins": Array [],
  "res": undefined,
  "showAdminPageButton": true,
  "showHelpPageButton": true,
  "singlePluginLogo": false,
  "toggleDarkMode": [Function],
  "toggleDrawer": [Function],
  "toggleHelp": [Function],
  "toggleHighContrastMode": [Function],
}
`;

exports[`Main app bar component app bar renders correctly 1`] = `
Object {
  "adminPageDefaultTab": undefined,
  "classes": Object {
    "appBar": "MainAppBar-appBar-2",
    "button": "MainAppBar-button-5",
    "grow": "MainAppBar-grow-3",
    "menuButton": "MainAppBar-menuButton-6",
    "menuButtonOpen": "MainAppBar-menuButtonOpen-8",
    "menuButtonPlaceholder": "MainAppBar-menuButtonPlaceholder-7",
    "root": "MainAppBar-root-1",
    "titleButton": "MainAppBar-titleButton-4",
  },
  "darkMode": false,
  "drawerOpen": false,
  "highContrastMode": false,
  "homepageUrl": undefined,
  "loading": true,
  "loggedIn": true,
  "logo": undefined,
  "manageCookies": [Function],
  "navigateToAdminPage": [Function],
  "navigateToHelpPage": [Function],
  "navigateToHome": [Function],
  "pathname": "/",
  "plugins": Array [],
  "res": undefined,
  "showAdminPageButton": true,
  "showHelpPageButton": true,
  "singlePluginLogo": false,
  "toggleDarkMode": [Function],
  "toggleDrawer": [Function],
  "toggleHelp": [Function],
  "toggleHighContrastMode": [Function],
}
`;

exports[`Main app bar component does not render Help button when feature is false 1`] = `
Object {
  "adminPageDefaultTab": undefined,
  "classes": Object {
    "appBar": "MainAppBar-appBar-18",
    "button": "MainAppBar-button-21",
    "grow": "MainAppBar-grow-19",
    "menuButton": "MainAppBar-menuButton-22",
    "menuButtonOpen": "MainAppBar-menuButtonOpen-24",
    "menuButtonPlaceholder": "MainAppBar-menuButtonPlaceholder-23",
    "root": "MainAppBar-root-17",
    "titleButton": "MainAppBar-titleButton-20",
  },
  "darkMode": false,
  "drawerOpen": false,
  "highContrastMode": false,
  "homepageUrl": undefined,
  "loading": true,
  "loggedIn": true,
  "logo": undefined,
  "manageCookies": [Function],
  "navigateToAdminPage": [Function],
  "navigateToHelpPage": [Function],
  "navigateToHome": [Function],
  "pathname": "/",
  "plugins": Array [],
  "res": undefined,
  "showAdminPageButton": true,
  "showHelpPageButton": false,
  "singlePluginLogo": false,
  "toggleDarkMode": [Function],
  "toggleDrawer": [Function],
  "toggleHelp": [Function],
  "toggleHighContrastMode": [Function],
}
`;

exports[`Main app bar component uses single plugin logo when feature is true 1`] = `
Object {
  "adminPageDefaultTab": undefined,
  "classes": Object {
    "appBar": "MainAppBar-appBar-34",
    "button": "MainAppBar-button-37",
    "grow": "MainAppBar-grow-35",
    "menuButton": "MainAppBar-menuButton-38",
    "menuButtonOpen": "MainAppBar-menuButtonOpen-40",
    "menuButtonPlaceholder": "MainAppBar-menuButtonPlaceholder-39",
    "root": "MainAppBar-root-33",
    "titleButton": "MainAppBar-titleButton-36",
  },
  "darkMode": false,
  "drawerOpen": false,
  "highContrastMode": false,
  "homepageUrl": undefined,
  "loading": true,
  "loggedIn": true,
  "logo": undefined,
  "manageCookies": [Function],
  "navigateToAdminPage": [Function],
  "navigateToHelpPage": [Function],
  "navigateToHome": [Function],
  "pathname": "/",
  "plugins": Array [],
  "res": undefined,
  "showAdminPageButton": true,
  "showHelpPageButton": true,
  "singlePluginLogo": true,
  "toggleDarkMode": [Function],
  "toggleDrawer": [Function],
  "toggleHelp": [Function],
  "toggleHighContrastMode": [Function],
}
`;
